--- a/pom.xml
+++ b/pom.xml
@@ -28,22 +28,20 @@
     <module>leaves</module>
   </modules>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-   <maven.compiler.source>21</maven.compiler.source>
-   <maven.compiler.target>21</maven.compiler.target>
-    <spring.boot.maven.plugin.version>3.2.5</spring.boot.maven.plugin.version>
-    <spring.boot.dependencies.version>3.2.5</spring.boot.dependencies.version>
-  </properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>21</java.version>
+        <spring.boot.version>3.2.5</spring.boot.version>
+    </properties>
 
   <dependencyManagement>
     <dependencies>
       <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-dependencies</artifactId>
-        <version>${spring.boot.dependencies.version}</version>
-        <scope>import</scope>
+        <version>${spring.boot.version}</version>
         <type>pom</type>
+        <scope>import</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -73,7 +71,6 @@
         <plugin>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-maven-plugin</artifactId>
-          <version>${spring.boot.maven.plugin.version}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -88,6 +85,24 @@
             </annotationProcessorPaths>
           </configuration>
         </plugin>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-enforcer-plugin</artifactId>
+              <version>3.4.1</version>
+              <executions>
+                  <execution>
+                      <id>enforce-java</id>
+                      <goals><goal>enforce</goal></goals>
+                      <configuration>
+                          <rules>
+                              <requireJavaVersion>
+                                  <version>[21,)</version>
+                              </requireJavaVersion>
+                          </rules>
+                      </configuration>
+                  </execution>
+              </executions>
+          </plugin>
       </plugins>
     </pluginManagement>
   </build>
