--- a/planning/src/main/resources/application-dev.yml
+++ b/planning/src/main/resources/application-dev.yml
@@ -7,3 +7,8 @@ spring:
       database: ${DB_NAME}
   jmx:
     enabled: false
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
